Assignment3/first-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: first-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /first
        pathType: Prefix
        backend:
          service:
            name: first
            port:
              number: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: first
spec:
  type: ClusterIP
  ports:
  - port: 8080
  selector:
    app: first
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: first
spec:
  replicas: 1
  selector:
    matchLabels:
      app: first
  template:
    metadata:
      labels:
        app: first
    spec:
      containers:
      - name: smyrninio-rep
        image: smyrninio/smyrninio-rep:flask-hello-v2
        resources:
          limits:
            cpu: "200m"
            memory: "256Mi"
