Assignment3/second-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: second-ingress
spec:
  rules:
  - http:
      paths:
      - path: /second
        pathType: Prefix
        backend:
          service:
            name: second
            port:
              number: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: second
spec:
  type: ClusterIP
  ports:
  - port: 8080
  selector:
    app: second
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: second
spec:
  replicas: 1
  selector:
    matchLabels:
      app: second
  template:
    metadata:
      labels:
        app: second
    spec:
      containers:
      - name: smyrninio-rep
        image: smyrninio/smyrninio-rep:flask-hello-v2
